--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                             <li><i class="fa-brands fa-think-peaks"></i></li>
                             <li><i class="fa-solid fa-wifi"></i></li>
                         </ul>
-                        <p>© 2015 Axure Themes</p>
+                        <p>© 2015 Axure Themes | Prepared By:Md Jubayer Hussain </p>
                     </div>
                 </div>
 
